--- a/devops.html
+++ b/devops.html
@@ -119,7 +119,7 @@ leading?...</p>
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/j66c67jy6mrjhntqb6qszge5ar'>DevOps Engineer at FinTech disruptor | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/j66c67jy6mrjhntqb6qszge5ar'>DevOps Engineer at FinTech disruptor | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -146,7 +146,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -190,7 +190,7 @@ term?...</p>
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/devops-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/devops-engineer'>
       DevOps Engineer - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
@@ -310,7 +310,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of Senior DevOps Engineer at Azimo.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redshelf.applytojob.com/apply/msFkIQAoYc/DevOps-Engineer'>DevOps Engineer - RedShelf - Career Page</a></h5> 
+<h5><a href='http://redshelf.applytojob.com/apply/msFkIQAoYc/DevOps-Engineer'>DevOps Engineer - RedShelf - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -334,7 +334,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastek-uk.workable.com/j/C34464ACAE'>Mastek (UK) Ltd - Jobs: AWS DevOps Engineer - Birmingham - Apply online</a></h5> 
+<h5><a href='https://mastek-uk.workable.com/j/C34464ACAE'>Mastek (UK) Ltd - Jobs: AWS DevOps Engineer - Birmingham - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -342,7 +342,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Canada Canada London Canada Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -434,7 +434,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/vocera-communications-inc/job/ohMmafwj'>Vocera Communications, Inc. Careers - DevOps Engineer 2</a></h5> 
+<h5><a href='http://jobs.jobvite.com/vocera-communications-inc/job/ohMmafwj'>Vocera Communications, Inc. Careers - DevOps Engineer 2</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Position Description: As a DevOps Engineer, you will play a key role developing 
 on the AWS platform, as well as crafting and implementing infrastructure as?...</p>
