--- a/software.html
+++ b/software.html
@@ -45,7 +45,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/osOCafwM'>New Relic Careers - Lead Software Engineer - Java</a></h5> 
 <p><span class="badge badge-light">Portland,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -99,11 +99,11 @@
 <p><span class="badge badge-light">Santa Clara,</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -147,7 +147,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ossW9fwJ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nEwLTKw3'>ServiceNow Careers - Staff Front End Software Engineer (UI)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ossW9fwJ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nEwLTKw3'>ServiceNow Careers - Staff Front End Software Engineer (UI)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -163,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -411,7 +411,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light">Vancouver Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zynga/job/oV3Aafws'>Zynga Careers - Senior Software Engineer (Server) - Slots</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zynga/job/oV3Aafws'>Zynga Careers - Senior Software Engineer (Server) - Slots</a></h5> 
 <p><span class="badge badge-light">Toronto Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -435,7 +435,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oHG37fwh'>Numbrs Personal Finance AG Careers - Senior Software Engineer, Backend</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/oHG37fwh'>Numbrs Personal Finance AG Careers - Senior Software Engineer, Backend</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -447,7 +447,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/ozF37fw8'>Numbrs Personal Finance AG Careers - Senior Software Engineer, iOS</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/ozF37fw8'>Numbrs Personal Finance AG Careers - Senior Software Engineer, iOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -459,7 +459,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
